css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}
:root {
  --family-montserrat: "Montserrat", sans-serif;
  --font-18px: 1.125rem;
  --font-20px: 1.25rem;
  --font-24px: 1.5rem;
  --font-36px: 2.25rem;
  --font-48px: 3rem;
  --font-50px: 3.125rem;
  --font-56px: 3.5rem;
  --font-64px: 4rem;

  /* --color-primary: #f7c43a;
  --color-secondary: #deb134; */
  --color-primary: #00aad4;
  --color-secondary: #0387a8;
  --color-black: #181818;
  --color-black-opacity: rgba(24, 24, 24, 0.8);
  --color-black-opacity-light: rgba(0, 0, 0, 0.6);
  --color-white: #fff;
  --about-bg: rgba(24, 24, 24, 0.95);
  --footer-bg-from: #181919;
  --footer-bg-to: #232628;

  --icon-width: 3rem;
  --icon-height: 3rem;

  --weight-300: 300;
  --weight-400: 400;
  --weight-600: 600;
  --weight-700: 700;
  --weight-800: 800;
  --weight-900: 900;

  --filter-white: invert(100%) sepia(3%) saturate(12%) hue-rotate(346deg)
    brightness(104%) contrast(104%);
  --filter-yellow: brightness(0) saturate(100%) invert(87%) sepia(19%)
    saturate(1696%) hue-rotate(339deg) brightness(99%) contrast(96%);
  --filter-black: brightness(0) saturate(100%);
}

@font-face {
  font-family: "Montserrat";
  font-weight: 300 800;
  src: url("../assets/fonts/Montserrat.woff2") format("woff2-variations");
  font-display: swap;
}
@font-face {
  font-family: "Material Symbols Outlined";
  font-style: normal;
  src: url("../assets/fonts/MaterialSymbolsOutlined.woff2") format("woff2");
  font-display: swap;
}
.icon {
  width: var(--font-36px);
  height: var(--font-36px);
  filter: invert(100%) sepia(3%) saturate(12%) hue-rotate(346deg)
    brightness(104%) contrast(104%);
  display: inline-block;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  line-height: 1.5;
  font-family: var(--family-montserrat);
  font-size: var(--font-18px);
}
img {
  max-width: 100%;
  height: auto;
}
h1,
h2,
p,
figure,
figcaption {
  margin: 0;
  padding: 0;
  display: block;
}
ul,
li {
  margin: 0;
  padding: 0;
  list-style: none;
}
a {
  text-decoration: none;
  color: var(--color-black);
}
address {
  font-style: normal;
}
.container {
  margin: 0 auto;
  width: min(90%, 1200px);
}
.btn {
  display: inline-block;
  padding: 1em 2em;
  background-color: var(--color-primary);
  border-radius: 0.5em;
}
.heading {
  font-size: clamp(2.1rem, 3vw, var(--font-64px));
  font-weight: var(--weight-400);
  text-transform: uppercase;
}
.text {
  color: var(--color-black-opacity);
  font-size: clamp(1.06rem, 2vw, var(--font-18px));
  line-height: 1.6;
}
/* HEADER AND NAV */
#primary__header {
  background-color: var(--color-black-opacity);
  position: relative;
}
.logo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em 0;
  position: relative;
  z-index: 1001;
}
.logo__img {
  width: min(45%, 12.5rem);
}
.hamburger {
  position: relative;
  display: block;
  width: 40px;
  height: 50%;
  cursor: pointer;
  z-index: 9999;
  appearance: none;
  background: none;
  outline: none;
  border: none;
  transition: transform 0.4s ease;
}
.hamburger.is-active {
  transform: rotate(90deg);
}
.hamburger .bar,
.hamburger::after,
.hamburger::before {
  content: "";
  display: block;
  width: 100%;
  height: 3px;
  background-color: var(--color-white);
  margin: 6px 0px;
  transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
  transform-origin: 50% 50%;
}
.hamburger .bar {
  opacity: 1;
}
.hamburger.is-active .bar {
  opacity: 0;
  transform: scale(0);
}
.hamburger.is-active::before {
  transform: rotate(45deg) translateY(13px);
}
.hamburger.is-active::after {
  transform: rotate(-45deg) translateY(-13px);
}
.nav {
  display: flex;
  text-transform: uppercase;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3em;
  position: fixed;
  top: 0;
  right: -25%;
  width: 25%;
  height: 100vh;
  z-index: 100;
  background-color: rgba(24, 24, 24, 0.9);
  transition: right 0.4s ease;
}
.nav.is-active {
  right: 0;
}
.nav__item {
  margin-bottom: 1.5em;
  display: flex;
  justify-content: center;
}
.nav__link {
  font-size: clamp(1.3rem, 2vw, var(--font-24px));
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: var(--color-white);
  position: relative;
}
.nav__link::after {
  content: "";
  width: 0;
  height: 3px;
  background-color: var(--color-primary);
  position: absolute;
  bottom: -5px;
  left: 0;
  transition: ease-in 0.3s;
}
.nav__link:hover::after {
  width: 100%;
}
.nav__link:hover,
.nav__link:focus {
  opacity: 0.9;
}
/* .nav__btn {
  color: var(--color-white);
  text-transform: uppercase;
  font-weight: var(--weight-700);
  border: var(--color-primary) 3px solid;
  transition: ease-in 0.3s;
}

.nav__btn:hover,
.nav__btn:focus {
  background-color: transparent;
} */
/* HERO */
.hero__background {
  background-image: url("../assets/nielsen-2.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  max-width: 100%;
  /* max-height: 100%; */
  position: absolute;
  inset: 0;
  z-index: -10;
  overflow: clip;
}
.hero__container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 80vh;
}
.hero__heading {
  font-size: clamp(2rem, 5vw, var(--font-56px));
  color: var(--color-white);
  font-weight: var(--weight-300);
  text-transform: uppercase;
  text-align: center;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.heading-highlight {
  font-weight: var(--weight-800);
  color: var(--color-primary);
}
.hero__icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;

  padding: 4.5em 0;
  margin: 0 auto;
  color: var(--color-white);
}
.hero__icon-text {
  text-transform: uppercase;
}
.icon__expand {
  animation: bounce 2s infinite linear;
  fill: var(--color-primary);
}

.hero__subtitle {
  text-align: center;
  color: var(--color-white);
  font-size: 1.2rem;
}

/* MAIN */

.rule__card {
  height: 100%;
}
.rule__examples {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  place-items: center;
  justify-content: center;
  gap: 0 0.75rem;
  padding: 1.5rem 0 1.5rem 0;
}
.rule__card-example {
  display: grid;
  grid-template-rows: 1fr 30%;
  justify-items: center;
  align-items: center;
  height: 100%;
}
.rule__card-example img {
  max-width: 80%;
  height: auto;
}

.rule {
  margin-top: 1em;
  display: flex;
  flex-direction: column;
  gap: 1em;
}
.rule:last-of-type {
  padding-bottom: 5rem;
}

.header-container {
  padding: 5em 0 2em 0;
  text-align: center;
}

.rule__header-highlight {
  font-weight: var(--weight-800);
  color: var(--color-primary);
}
.heading-sub-text {
  font-size: clamp(0.9rem, 2vw, var(--font-24px));
  color: var(--color-black-opacity);
}
.info-list-text {
  color: var(--color-black-opacity-light);
  font-weight: var(--weight-300);
  flex: 0 1 80%;
}

/* ADVANTAGES */

/* SERVICES */
#services {
  display: flex;
  flex-direction: column;
}

/* ABOUT COMPANY */
#about-company {
  background-color: var(--about-bg);
  color: var(--color-white);
  padding: 2em 0;
}
/* FOOTER */

.footer {
  background: linear-gradient(var(--footer-bg-from), var(--footer-bg-to));
}
.footer-container {
  display: flex;
  flex-direction: column;
  gap: 1em;
}
.footer__logo {
  padding: 2em 0 2.5em 0;
}
.footer__logo-img {
  display: block;
  max-width: 65%;
  margin: 0 auto;
}
.footer__nav {
  font-size: clamp(0.95rem, 2vw, var(--font-18px));
}
.footer__copy-text,
.footer__nav,
.footer__link {
  color: var(--color-white);
}

.footer__copy-text {
  text-align: center;
}
.footer__authors {
  font-weight: 600;
}
.footer__nav-item {
  margin-bottom: 1em;
}
.footer__link:hover,
.footer__link:active {
  opacity: 0.8;
}
.footer__copy {
  padding: 2em 1em;
}
.footer__copy-text {
  margin-bottom: 0.5em;
}

/* ANIMATIONS */
@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0);
  }
}

/* MEDIA QUERIES */

@media (min-width: 700px) {
  .rule {
    flex-direction: row;
  }
  .rule-info {
    flex: 1 1 50%;
  }
}

/* @media (min-width: 1024px) {
  .hamburger {
    display: none;
  }
  .logo {
    display: flex;
    flex: 1 1 30%;
  }
  .logo__img {
    width: auto;
  }
  .nav {
    position: relative;
    inset: 0;
    flex-direction: row;
    background-color: transparent;
    padding: 0;
    min-height: auto;
  }
  .nav__list {
    display: flex;
    margin: 0 auto;
    align-items: center;
    gap: 2.5em;
    max-width: 100%;
  }
  .nav__item {
    margin: 0;
  }
  #primary__header > .container {
    display: flex;
  }
  #about-company > .container {
    display: flex;
    gap: 4em;
  }
  .footer-container {
    padding: 3em;
    flex-direction: row;
    justify-content: space-between;
  }
  .footer__logo {
    padding: 1em;
    width: min(45%, 500px);
  }
  .footer__nav {
    flex: 1;
  }
  .footer__copy {
    padding: 2em 0;
  }
} */
/* @media (max-height: 440px) {
  .nav__btn {
    margin-bottom: 3.125rem;
  }
} */

